--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,4 +1,10 @@
 /* Main class */
+
+.brand {
+  margin-right: auto;
+  margin-left: 12px;
+}
+
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
@@ -44,7 +50,7 @@
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: #0a3d5c;
   text-decoration: none;
 }
 
@@ -54,15 +60,15 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: #0a3d5c;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid #0a3d5c;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: #0a3d5c;
+  opacity: 0.9;
 }
 
 /* Navbar search form */
