--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // Graphical variables
+@import "config/reset";
 @import "config/variables";
 @import "config/bootstrap_variables";
 
@@ -13,3 +14,9 @@
 @import "components/index";
 @import "pages/index";
 @import "vendor/index";
+
+
+
+.center{
+  margin: auto 0px;
+}
