Form after  migrate

--- a/app/views/fines/_form.html.erb
+++ b/app/views/fines/_form.html.erb
@@ -18,7 +18,7 @@
   <%= f.input :fine_deadline, label: 'Limit Date please', error: 'Limit Date is mandatory, please specify one' %>
 
   <h3>Votre offre</h3>
-  <%= f.input :priceoffer, label: 'Offer please', error: 'Offer is mandatory, please specify one' %>
+  <%= f.input :fine_offer, label: 'Offer please', error: 'Offer is mandatory, please specify one' %>
    <%= f.input :comment, label: 'Comment please' %>
   <%= f.submit "Publish a fine", class: "btn btn-primary" %>
 <% end %>
