--- a/app/assets/stylesheets/components/_fine_card.scss
+++ b/app/assets/stylesheets/components/_fine_card.scss
@@ -1,23 +1,27 @@
 .card {
-  text-shadow: 0 1px 3px rgba(0,0,0,0.4);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+  transition: 0.3s;
   background-size: cover !important;
-  max-width: 400px;
   position: relative;
-  border: solid 2px rgba(0,0,0,0.4) ;
-  border-radius: 2px;
-  margin: 5px;
+  border-radius: 5px;
+  margin: 10px;
+  padding-top: 5px;
 }
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
+}
+
 .fine-card {
   position: absolute;
-  justify-content: space-between;
 }
 
 .fine-card-logo {
   height : 60px;
 }
-;
+
 .center-content {
   display: flex;
-  margin: auto ;
+  margin: auto;
   align-items: center;
 }
