--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -1,12 +1,21 @@
-<div class="card">
-  <div class="center-content">
-    <div>
-      <%= image_tag("beer.png", class: "fine-card-logo")%>
-    </div>
-    <div class="fine-card-details">
-      <h3>Excés de vitesse</h3>
-      3 points 135€ d'amende date limite : 25 /10
-      <h4>800€</h4>
+<div class="container">
+  <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
+    <div class="card">
+      <div class="center-content">
+        <div>
+          <%= image_tag("beer.png", class: "fine-card-logo")%>
+        </div>
+        <div class="fine-card-details">
+          <h3>Excés de vitesse</h3>
+          3 points 135€ d'amende date limite : 25 /10
+          <h4>800€</h4>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
+
+
+
+
