--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,21 @@
 <div class="container">
   <div class="row col-xs-12 col-sm-4 col-sm-offset-4">
-    <h2>Sign up</h2>
-
+    <div class="class text-center">
+      <h2>Sign up</h2>
+    </div>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
 
         <div class="form-inputs">
+          <%= f.input :last_name, required: true,label: 'Lastname', error: 'Lastname is mandatory, please specify one' %>
+          <%= f.input :first_name, required: true,label: 'Firstrname', error: 'Lastname is mandatory, please specify one' %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+          <%= f.button :submit, "Sign up", class: "btn btn-large btn-block btn-primary full-width" %>
         </div>
       <% end %>
     </div>
