--- a/app/views/fines/_form.html.erb
+++ b/app/views/fines/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="class text-center">
-    <h1>Enregistrez votre amende</h1@>
+    <h1>Enregistrez votre amende</h1>
   <h3>Votre amende ne sera bientot qu'un lointain souvenir....</h3>
   </div>
 
