--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
         <div class="form-inputs">
           <%= f.input :last_name, required: true,label: 'Lastname', error: 'Lastname is mandatory, please specify one' %>
-          <%= f.input :first_name, required: true,label: 'Firstrname', error: 'Lastname is mandatory, please specify one' %>
+          <%= f.input :first_name, required: true,label: 'Firstname', error: 'Lastname is mandatory, please specify one' %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
