--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -6,9 +6,9 @@
           <%= image_tag("beer.png", class: "fine-card-logo")%>
         </div>
         <div class="fine-card-details">
-          <h3>Excés de vitesse</h3>
-          3 points 135€ d'amende date limite : 25 /10
-          <h4>800€</h4>
+          <h3><%=fine.reason%></h3>
+          <%=fine.point%> points <%=fine.price%>€ d'amende Date limite : <%=fine.fine_deadline.to_formatted_s(:short) %>
+          <h4><%=fine.fine_offer%>€</h4>
         </div>
       </div>
     </div>
