--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
+<div class="banner" style="background-image: url(<%= asset_path('contravention.jpg') %>);">
+  <div class="banner-content">
+    <p>Avec,</p>
+    <h1>Twelve-Points</h1>
+    <p>Laissez Papy Mougeot prendre en charge votre amende....</p>
+    <a class="btn btn-primary btn-lg">Postez votre amende</a>
+  </div>
+</div>
+
 <%=render 'fines/card'%>
 <%=render 'fines/card'%>
