--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row col-xs-12 col-sm-4 col-sm-offset-4">
-    <h2>Sign up</h2>
+    <h2 class="text-center">Sign up</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -12,8 +12,9 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+          <%= f.button :submit, "Sign up", class: "btn btn-large btn-block btn-primary full-width" %>
         </div>
+        <p class="text-signup">By signing up, you agree to our Terms of service</p>
       <% end %>
     </div>
 </div>
