add a link to fine card to access fine_show

--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -1,3 +1,4 @@
+<%= link_to(fine_path(fine)) do %>
 <div class="container">
   <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
     <div class="card">
@@ -14,8 +15,6 @@
     </div>
   </div>
 </div>
-
-
-
+<% end %>
 
 
