Create a jquery function to redirect to an another page element with the class redirect-to and a href attribute.

--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
-    <div class="card">
+    <div class="card redirect-to" href='<%=fine_path(fine)%>'>
       <div class="center-content">
         <div>
           <%= image_tag("beer.png", class: "fine-card-logo")%>
@@ -14,5 +14,3 @@
     </div>
   </div>
 </div>
-
-
