change image banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: url(<%= asset_path('contravention.jpg') %>);">
+<div class="banner" style="background-image: url(<%= asset_path('contravention2.jpg') %>);">
   <div class="banner-content">
     <p>Avec,</p>
     <h1>Twelve-Points</h1>
