--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
-<div class="banner" style="background-image: url(<%= asset_path('image_banner.jpg') %>);">
-  <div class="banner-content">
-    <p>Avec,</p>
-    <h1>Twelve-Points</h1>
-    <p>Laissez Papy Mougeot prendre en charge votre amende....</p>
-    <a class="btn btn-primary btn-lg">Postez votre amende</a>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path('image_banner.jpg') %>);">
+  <div class="banner-contents">
+      <p>Avec,</p>
+      <h1>Twelve-Points</h1>
+      <p>Laissez Papy Mougeot prendre en charge votre amende....</p>
+      <a class="btn btn-primary btn-lg">Postez votre amende</a>
   </div>
 </div>
 
