--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,5 +6,5 @@
     <a class="btn btn-primary btn-lg">Postez votre amende</a>
   </div>
 </div>
-
+<%= render partial: "shared/user_profile" %>
 <%= render partial: "fines/card", collection: @fines, as: :fine %>
