Change tabs names

--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,18 +1,8 @@
 <div class="tabs">
   <a class="tab active" href="#">
-    <h3>350</h3>
-    <p>Followers</p>
+    <h3>Mes contraventions</h3>
   </a>
   <a class="tab" href="#">
-    <h3>456</h3>
-    <p>Following</p>
-  </a>
-  <a class="tab" href="#">
-    <h3>189</h3>
-    <p>Upvoted</p>
-  </a>
-  <a class="tab" href="#">
-    <h3>13</h3>
-    <p>Submitted</p>
+    <h3>Mes offres</h3>
   </a>
 </div>
