--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,8 +1,18 @@
 <div class="tabs">
-  <a class="tab active" href="#">
+<a class="tab active">
     <h3>Mes contraventions</h3>
   </a>
-  <a class="tab" href="#">
+  <a class="tab">
     <h3>Mes offres</h3>
   </a>
+</div>
+
+<div id="tabs-1">
+  <p>Content for Tab 1</p>
+</div>
+<div id="tabs-2">
+  <p>Content for Tab 2</p>
+</div>
+<div id="tabs-3">
+  <p>Content for Tab 3</p>
 </div>
