--- a/app/views/fines/_form.html.erb
+++ b/app/views/fines/_form.html.erb
@@ -13,7 +13,7 @@
 
       <%= f.input :first_name, label: 'Your firstrname please', error: 'Lastname is mandatory, please specify one' %>
 
-      <%=f.input :reason, collection: ["Traffic Light", "Overspeed", "Other" ] %>
+      <%=f.input :reason, collection: ["Traffic Light", "Speeding", "Other" ] %>
 
       <%=f.input :point, collection: 1..6 %>
 
