--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,44 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+
+
+// VALUE PROP
+
+.value-prop {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  margin-top: 20px;
+}
+.value-prop .feature {
+  padding: 20px 30px;
+  text-align: center;
+  width: 50%;
+}
+.value-prop i.fa {
+  font-size: 2.4em;
+  color: #757c84;
+  position: absolute;
+  left: -12px;
+  margin-top: 7px;
+}
+
+.value-prop h3 {
+  font-size: 20px;
+}
+
+.value-prop p {
+  font-size: 14px;
+}
+
+#key-features ul li {
+  text-align: left;
+  color: #757c84;
+  margin: 40px 80px;
+  padding-left: 40px;
+  line-height: 2em;
+  font-size: 15px;
+  font-weight: 300;
+  position: relative;
+}
