Implement the tab selection.

--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,18 +1,15 @@
 <div class="tabs">
-<a class="tab active">
+<a class="tab active" content-id ="#fine">
     <h3>Mes contraventions</h3>
   </a>
-  <a class="tab">
+  <a class="tab" content-id ="#offer">
     <h3>Mes offres</h3>
   </a>
 </div>
 
-<div id="tabs-1">
+<div id="fine" class="tab-content" >
   <p>Content for Tab 1</p>
 </div>
-<div id="tabs-2">
+<div id="offer" class="tab-content">
   <p>Content for Tab 2</p>
-</div>
-<div id="tabs-3">
-  <p>Content for Tab 3</p>
 </div>
