Display the rendre in the tab selction.

--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -8,8 +8,8 @@
 </div>
 
 <div id="fine" class="tab-content" >
-  <p>Content for Tab 1</p>
+  <%= render partial: "fines/card", collection: @fines, as: :fine %>
 </div>
 <div id="offer" class="tab-content">
-  <p>Content for Tab 2</p>
+  <%= render partial: "fines/card", collection: @fines, as: :fine %>
 </div>
