--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,7 +3,7 @@
    text-align:center;
    color:white;
    margin-top: 10px;
-   padding: 5px 0px 5px 0px;
+   padding: 5px 0px;
    left:0px;
    bottom:0px;
    height:80px;
