chgt bouton home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="banner-contents">
         <h1>Twelve-Points</h1>
         <p>Laissez Papy Mougeot prendre en charge votre amende....</p>
-        <a class="btn btn-primary btn-lg">Postez votre amende</a>
+        <%= link_to t(".top_call_to_action", default: "Enregistrez votre amende"), new_fine_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     </div>
   </div>
 
