--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,7 @@
-<div id= "footer">
-  <h1>Footer</h1>
+<div class="card card-white" id="footer">
+  <ul>
+    <li class="inline"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+    <li class="inline"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
+    <li class="inline"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a></li>
+  </ul>
 </div>
