--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,12 +1,36 @@
-// Your footer style
 #footer {
-   text-align:center;
-   color:white;
-   margin-top: 10px;
-   padding: 5px 0px;
-   left:0px;
-   bottom:0px;
-   height:80px;
-   width:100%;
-   background:#0A3D5C;
+  height: 50px;
+  width: 100%;
+  background-color: #0A3D5C;
+  color:white;
+  padding-top: 10px;
+  margin: 5px;
+}
+.card {
+  background:rgb(240,240,240);
+  border: 1px solid black;
+  border-radius:5px;
+  box-shadow: 10px 10px 5px #FFEF03;
+  text-align : justify;
+}
+.card-white {
+  color:white;
+  padding: 30px;
+  border: 1px solid white;
+}
+.inline  {
+  display: inline-block;
+}
+
+ul {
+  list-style-type: none;
+  text-align: center;
+}
+li {
+  text-align: center;
+  margin: 20;
+}
+a {
+  color: #ffffff;
+  text-decoration: none;
 }
