--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -1,16 +1,43 @@
-<div class="container">
-  <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
-    <div class="card redirect-to" href='<%=fine_path(fine)%>'>
-      <div class="center-content">
-        <div>
-          <%= image_tag("beer.png", class: "fine-card-logo")%>
+<!-- this is the markup. you can change the details (your own name, your own avatar etc.) but don’t change the basic structure! -->
+<div class="all-cards">
+  <div class="container">
+    <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
+      <aside class="profile-card redirect-to" href='<%=fine_path(fine)%>'>
+
+        <header>
+
+          <!-- here’s the avatar -->
+          <a target="_blank" href="<%=fine_path(fine)%>">
+            <img src="https://www.dropbox.com/s/9upq789hxnhs361/ava.gif?raw=1">
+          </a>
+
+          <h1><%=fine.reason%></h1>
+          <h2><%=fine.fine_offer%>€</h2>
+
+        </header>
+
+        <!-- bit of a bio; who are you? -->
+        <div class="profile-bio">
+
+          <p> J'ai une amende de <b><%=fine.price%>€</b> avec <b><%=fine.point%> points</b>. Aidez moi avant le <%=fine.fine_deadline.to_formatted_s(:short) %> </p>
+
         </div>
-        <div class="fine-card-details">
-          <h3><%=fine.reason%></h3>
-          <%=fine.point%> points <%=fine.price%>€ d'amende Date limite : <%=fine.fine_deadline.to_formatted_s(:short) %>
-          <h4><%=fine.fine_offer%>€</h4>
-        </div>
-      </div>
+
+        <!-- some social links to show off -->
+        <ul class="profile-social-links">
+
+        <li>
+          <a target="_blank" href="#">
+            <i class="profile-card redirect-to" href='<%=fine_path(fine)%>'></i>
+          </a>
+        </li>
+
+          <!-- add or remove social profiles as you see fit -->
+
+        </ul>
+
+      </aside>
     </div>
   </div>
 </div>
+<!-- that’s all folks! -->
