--- a/app/views/fines/show.html.erb
+++ b/app/views/fines/show.html.erb
@@ -1,3 +1,21 @@
 <h1>Fines#show</h1>
-<p>Find me in app/views/fines/show.html.erb</p>
+<ul>
+  <li><%=@fine.id%> </li>
+  <li><%=@fine.fine_date%> </li>
+  <li><%=@fine.fine_deadline%> </li>
+  <li><%=@fine.point%> </li>
+  <li><%=@fine.price%> </li>
+  <li><%=@fine.reason%> </li>
+  <li><%=@fine.comment%> </li>
+  <li><%=@fine.user_id%> </li>
+  <li><%=@fine.updated_at%> </li>
+  <li><%=@fine.last_name%> </li>
+  <li><%=@fine.first_name%> </li>
+  <li><%=@fine.fine_offer%> </li>
+</ul>
+
+
+
+
+
 
