--- a/app/views/fines/show.html.erb
+++ b/app/views/fines/show.html.erb
@@ -1,21 +1,19 @@
 <h1>Fines#show</h1>
 <ul>
-  <li><%=@fine.id%> </li>
-  <li><%=@fine.fine_date%> </li>
-  <li><%=@fine.fine_deadline%> </li>
-  <li><%=@fine.point%> </li>
-  <li><%=@fine.price%> </li>
-  <li><%=@fine.reason%> </li>
-  <li><%=@fine.comment%> </li>
-  <li><%=@fine.user_id%> </li>
-  <li><%=@fine.updated_at%> </li>
-  <li><%=@fine.last_name%> </li>
-  <li><%=@fine.first_name%> </li>
-  <li><%=@fine.fine_offer%> </li>
+  <li><%="@fine.id: "%><%=@fine.id%> </li>
+  <li><%="@fine.fine_date: "%><%=@fine.fine_date%> </li>
+  <li><%="@fine.fine_deadline: "%><%=@fine.fine_deadline%> </li>
+  <li><%="@fine.point: "%><%=@fine.point%> </li>
+  <li><%="@fine.price: "%><%=@fine.price%> </li>
+  <li><%="@fine.reason: "%><%=@fine.reason%> </li>
+  <li><%="@fine.comment: "%><%=@fine.comment%> </li>
+  <li><%="@fine.user_id: "%><%=@fine.user_id%> </li>
+  <li><%="@fine.updated_at: "%><%=@fine.updated_at%> </li>
+  <li><%="@fine.last_name: "%><%=@fine.last_name%> </li>
+  <li><%="@fine.first_name: "%><%=@fine.first_name%> </li>
+  <li><%="@fine.fine_offer: "%><%=@fine.fine_offer%> </li>
 </ul>
 
-
-
-
+<%= render partial: "fines/card", object: @fine, as: :fine %>
 
 
