--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="card" id="footer">
   <ul>
-    <li class="inline"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-    <li class="inline"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-    <li class="inline"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+    <li class="inline"><a class="a-footer" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+    <li class="inline"><a class="a-footer" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    <li class="inline"><a class="a-footer" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
   </ul>
 </div>
