--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
 
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
-
+        Bonjour <%= current_user.first_name%>
       <!-- Notification -->
       <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
