--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,16 +14,16 @@
           <div class="feature col-xs-12 col-sm-6">
             <ul>
               <h3>Papy Mougeot</h3>
-              <li class="icon-tool-magnifier"><i class="fa fa-search"></i>Consultez toutes les annonces depuis le moteur de recherche. Trouvez une amende à prendre en charge partout en France.</li>
+              <li class="icon-tool-magnifier"><i class="fa fa-search"></i>Si vous avez 12 points sur votre permis et que vous êtes un mou du genou ou tout simplement un psychopathe de la sécurité, alors vendez vos points aux nombreux pilotes français. Il suffit de trouver une amende à prendre en charge partout en France contre une belle enveloppe !</li>
               <li class="icon-com-bubble-line"><i class="fa fa-comment"></i>Contactez gratuitement les propriétaires des amendes et posez leur toutes vos questions pratiques concernant l'amende et ses détails via notre messagerie intégrée.</li>
-              <li class="icon-interface-circle-tick-a"><i class="fa fa-check-circle"></i> Réservez directement en ligne de manière sécurisée et prenez en charge l'amende de vos rêves en quelques clics. Vous ne serez crédité qu’en cas d’acceptation de votre demande par le propriétaire de l'amende. Paiement 100% sécurisé. TwelvePoints est votre tiers de confiance.</li>
+              <li class="icon-interface-circle-tick-a"><i class="fa fa-check-circle"></i> Réservez directement en ligne de manière sécurisée et prenez en charge l'amende de vos rêves en quelques clics. Paiement 100% sécurisé. TwelvePoints est votre tiers de confiance.</li>
             </ul>
           </div>
 
           <div class="feature col-xs-12 col-sm-6">
             <ul>
               <h3>Pilote</h3>
-              <li class="icon-tool-magnifier"><i class="fa fa-newspaper-o"></i>Créez gratuitement une annonce pour la location de votre amende à d’autres particuliers. Excès de vitesse ou feu rouge grillé, ils sont tous les bienvenus sur TwelvePoints !</li>
+              <li class="icon-tool-magnifier"><i class="fa fa-newspaper-o"></i>Créez gratuitement une annonce pour sauver votre permis. Excès de vitesse ou feu rouge grillé, ils sont tous les bienvenus sur TwelvePoints !</li>
               <li class="icon-com-bubble-line"><i class="fa fa-shield"></i>Vendez votre amende à qui vous voulez, quand vous voulez et au prix que vous voulez. TwelvePoints vous permet de ne pas perdre votre permis et ainsi garder sa liberté de circulation.</li>
               <li class="icon-interface-circle-tick-a"><i class="fa fa-lock"></i>  Assurance tous risques en option jusqu’à 1000€ de couverture et dépôt de caution sécurisé. Confiez-nous la vente de votre amende.</li>
             </ul>
