Fix the typo error

--- a/app/views/fines/_form.html.erb
+++ b/app/views/fines/_form.html.erb
@@ -10,7 +10,7 @@
 
       <%= f.input :last_name, label: 'Lastname', error: 'Lastname is mandatory, please specify one' %>
 
-      <%= f.input :first_name, label: 'Firstrname', error: 'Lastname is mandatory, please specify one' %>
+      <%= f.input :first_name, label: 'Firstname', error: 'Lastname is mandatory, please specify one' %>
 
       <%=f.input :reason, collection: ["Traffic Light", "Speeding", "Other" ] %>
 
