--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -4,7 +4,6 @@
   background-color: #0A3D5C;
   color:white;
   padding-top: 10px;
-  padding: 30px;
 }
 
 
@@ -18,4 +17,7 @@ ul {
 
 .a-footer {
   color: #ffffff;
+  margin-left: 60px;
+  font-size: 25px;
+
 }
