--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,6 +32,8 @@
       </div>
   </section>
 
-  <%= render partial: "fines/card", collection: @fines, as: :fine %>
+  <div class="owl-carousel">
+    <%= render partial: "fines/card", collection: @fines, as: :fine %>
+  </div>
 
 </div>
