--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="card" id="footer">
+<div id="footer">
   <ul>
     <li class="inline"><a class="a-footer" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
     <li class="inline"><a class="a-footer" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
