--- a/app/views/fines/new.html.erb
+++ b/app/views/fines/new.html.erb
@@ -1,3 +1,7 @@
+<div class="class text-center">
+  <h1>Enregistrez votre amende</h1>
+  <h3>Votre amende ne sera bientot qu'un lointain souvenir....</h3>
+</div>
 
 <%= render 'form', fine: fines_path %>
 
