--- a/app/views/fines/show.html.erb
+++ b/app/views/fines/show.html.erb
@@ -50,5 +50,4 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_fine_path(@fine) %>
-
+ <%= link_to t(".top_call_to_action", default: 'Modifiez cette amende'), edit_fine_path(@fine), class: "navbar-wagon-item navbar-wagon-button btn" %>
