--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,10 +1,19 @@
-<div class="container text-center">
+<div class="container_login text-center">
   <%- if controller_name != 'sessions' %>
     <%= link_to "Log in", new_session_path(resource_name) %><br />
   <% end -%>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
     <%= link_to "Don't have an account ? Sign up", new_registration_path(resource_name), class: "sign-up" %><br />
+  <% end -%>
+
+  <%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= link_to omniauth_authorize_path(resource_name, provider) do %>
+        <a href="" class="login-facebook" ><i class="fa fa-facebook"><%= OmniAuth::Utils.camelize(provider)%></i></a>
+      <% end %>
+      <br />
+    <% end -%>
   <% end -%>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
@@ -19,10 +28,5 @@
     <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
   <% end -%>
 
-  <%- if devise_mapping.omniauthable? %>
-    <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-    <% end -%>
-  <% end -%>
 </div>
 
