We can now accept an offer

--- a/app/views/fines/show.html.erb
+++ b/app/views/fines/show.html.erb
@@ -42,17 +42,16 @@
         <h5>Prime d'honnêteté: <%=@fine.fine_offer%> €</h5>
       </div>
       <div class="modal-footer">
-        <%= simple_form_for(@fine, url: fine_path(@fine)) do |f| %>
+        <%= simple_form_for(@new_offer, url: new_fine_offer_path(fine_id: @fine.id)) do |f| %>
         <div class="form-inputs">
-
+          Current user : <%=current_user.id%>
+          <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
         </div>
 
         <div class="form-actions">
           <%= f.button :submit , "Log in", class: "btn btn-large btn-block btn-primary full-width" %>
         </div>
        <% end %>
-
-
 
         <button type="button" class="btn btn-secondary" data-dismiss="modal">
           Oui Oui c'était bien moi :-)
