add carousel profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,12 @@
 </div>
 
 <div id="fine" class="tab-content" >
+  <div class="owl-carousel">
   <%= render partial: "fines/card", collection: @fines, as: :fine %>
+  </div>
 </div>
 <div id="offer" class="tab-content">
-  <%#= render partial: "fines/card", collection: @offers, as: :fine %>
+  <%#= render partial: "offers/card", collection: @offers, as: :offer %>
 </div>
 
 <p>offer <%= @offers.length%></p>
