Clean the directory

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div id="offer" class="tab-content">
-  <%#= render partial: "offers/card", collection: @offers, as: :offer %>
+  <%= render partial: "offers/card", collection: @offers, as: :offer %>
 </div>
 
 <p>offer <%= @offers.length%></p>
