--- a/app/views/fines/_card.html.erb
+++ b/app/views/fines/_card.html.erb
@@ -7,9 +7,9 @@
           <header>
 
             <!-- here’s the avatar -->
-            <a target="_blank" href="<%=fine_path(fine)%>">
+            <%= link_to fine_path(fine) do %>
               <img src="https://www.dropbox.com/s/9upq789hxnhs361/ava.gif?raw=1">
-            </a>
+            <% end %>
 
             <h1><%=fine.reason%></h1>
             <h2><%=fine.fine_offer%>€</h2>
@@ -27,18 +27,7 @@
             </b>. Aidez moi avant le <%=fine.fine_deadline.to_formatted_s(:short) %> </p>
           </div>
 
-          <!-- some social links to show off -->
-          <ul class="profile-social-links">
 
-          <li>
-            <a target="_blank" href="#">
-              <i class="profile-card redirect-to" href='<%=fine_path(fine)%>'></i>
-            </a>
-          </li>
-
-            <!-- add or remove social profiles as you see fit -->
-
-          </ul>
 
         </aside>
       </div>
