--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "font-awesome";
 
 // Your CSS
+@import "shared/shared";
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
