--- a/app/views/offers/_card.html.erb
+++ b/app/views/offers/_card.html.erb
@@ -1,6 +1,6 @@
 <div class="card card-block">
-  <h4 class="card-title">Card title</h4>
-  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  <a href="#" class="card-link">Card link</a>
-  <a href="#" class="card-link">Another link</a>
+  <h4 class="card-title"><%=offer.fine.reason%></h4>
+  <p class="card-text"> Amende : <%=offer.fine.price%></p>
+  <p class="card-text"> Point(s) perdus(s) : <%=offer.fine.point%></p>
+  <p class="card-text"> Prime d'honéteté : <%=offer.fine.fine_offer%> €</p>
 </div>
