--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
   <%= render partial: "fines/card", collection: @fines, as: :fine %>
   </div>
 </div>
-<div id="offer" class="tab-content">
+<div id="offer" class="tab-content flex-vertical-center">
   <%= render partial: "offers/card", collection: @offers, as: :offer %>
 </div>
 
