--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="class text-center">
 <%= @user.last_name %>
 </div>
-<% avatar_url = current_user.facebook_picture_url || current_user.photo || "http://placehold.it/30x30" %>
-<img src="avatar_url" class="avatar-large img-responsive center-block" alt="Avatar">
+
+<img src="http://placehold.it/30x30" class="avatar-large img-responsive center-block" alt="Avatar">
 
 
 <div class="tabs">
