--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <%= @user.last_name %>
 </div>
 
-<% avatar_url = current_user.facebook_picture_url || (current_user.photo && current_user.photo.path) || "http://placehold.it/30x30" %>
+<% avatar_url = @user.facebook_picture_url || (@user.photo && @user.photo) || "http://placehold.it/30x30" %>
 <img src='<%= avatar_url %>' class="avatar-large img-responsive center-block" alt="Avatar">
 
 
