--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="class text-center">
 <%= @user.last_name %>
 </div>
-<% avatar_url = @user.facebook_picture_url || @user.photo && @user.photo.path || 'http://placehold.it/30x30' %>
+<% avatar_url = @user.facebook_picture_url || @user.photo && @user.photo.url || 'http://placehold.it/30x30' %>
 
 <img src="<%= avatar_url %>" class="avatar-large img-responsive center-block" alt="Avatar">
 
