--- a/app/views/fines/show.html.erb
+++ b/app/views/fines/show.html.erb
@@ -1,6 +1,6 @@
-<div class="info_fine">
+<div class="info_fine text-center">
   <h2>Le petit mot de <%=@fine.first_name%> <%=@fine.last_name%></h2>
-  <p><%=@fine.fine_offer%></p>
+  <p><%=@fine.comment%></p>
 </div>
 
   <%@fine.offers.each do |offer|%>
@@ -9,59 +9,67 @@
 <%= render partial: "fines/card", object: @fine, as: :fine %>
 
 
-
+<% if current_user %>
 <!-- Modal -->
-<div class="modal fade" id="offerModal" tabindex="-1" role="dialog" aria-labelledby="offerModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title" id="offerModalLabel"><%=@fine.reason%></h4>
-      </div>
-      <div class="modal-body">
-        <h4> <%=@fine.point%> point(s)</h4>
-        <h5>Le : <%=@fine.fine_date%> </h5>
-        <h5>Amende : <%=@fine.price%> € </h5>
-        <h5>Prime d'honnêteté: <%=@fine.fine_offer%> €</h5>
-      </div>
-      <div class="modal-footer">
-        <%= simple_form_for(@new_offer, url: new_fine_offer_path(fine_id: @fine.id)) do |f| %>
-        <div class="form-inputs">
-          <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
+  <div class="modal fade" id="offerModal" tabindex="-1" role="dialog" aria-labelledby="offerModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="offerModalLabel"><%=@fine.reason%></h4>
         </div>
+        <div class="modal-body">
+          <h4> <%=@fine.point%> point(s)</h4>
+          <h5>Le : <%=@fine.fine_date%> </h5>
+          <h5>Amende : <%=@fine.price%> € </h5>
+          <h5>Prime d'honnêteté: <%=@fine.fine_offer%> €</h5>
+        </div>
+        <div class="modal-footer">
+          <%= simple_form_for(@new_offer, url: new_fine_offer_path(fine_id: @fine.id)) do |f| %>
+          <div class="form-inputs">
+            <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
+          </div>
 
-        <div class="form-actions">
-          <%= f.button :submit , "Oui Oui c'était bien moi :-)", class: "btn btn-large btn-block btn-primary full-width" %>
+          <div class="form-actions">
+            <%= f.button :submit , "Oui Oui c'était bien moi :-)", class: "btn btn-large btn-block btn-primary full-width" %>
+          </div>
+         <% end %>
         </div>
-       <% end %>
       </div>
     </div>
   </div>
-</div>
+<% end %>
 
 
-  <div class="container">
-    <div class="info_button text-center">
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#offerModal">
-        Accepter l'offre !
-      </button>
-    </div>
-  </div>
 
-   <div class="container">
-      <div class="info_button text-center">
-       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#offerModal">
-         Envoyer un message
-       </button>
-     </div>
+  <% if @fine.user == current_user %>
+   <div class="text-center" style="margin:10px">
+    <%= link_to t(".top_call_to_action", default: 'Modifiez cette amende'), edit_fine_path(@fine), class: "navbar-wagon-item navbar-wagon-button btn" %>
    </div>
 
+  <% else %>
+     <div class="container">
+        <div class="info_button text-center" style="margin:10px">
+          <% if user_signed_in? %>
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#offerModal">
+              Accepter l'offre !
+            </button>
+          <% else %>
+            <%= link_to "Accepter l'offre !", new_user_session_path, class: "btn btn-primary btn-lg" %>
+          <% end %>
+        </div>
+
+        <div class="info_button text-center">
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#offerModal">
+             Envoyer un message
+          </button>
+        </div>
+      </div>
+  <% end %>
+
 <div>
-  <p><%= link_to "Back", :back %></p>
+  <p class="text-center" style="margin:10px"><%= link_to "Back", root_path %></p>
 </div>
 
- <div>
-  <%= link_to t(".top_call_to_action", default: 'Modifiez cette amende'), edit_fine_path(@fine), class: "navbar-wagon-item navbar-wagon-button btn" %>
- </div>
