--- a/app/assets/stylesheets/components/_tab.scss
+++ b/app/assets/stylesheets/components/_tab.scss
@@ -1,5 +1,5 @@
   .tabs {
-  background: #53443F;
+  background: #0A3D5C;
   display: flex;
   padding: 10px 10px 0 10px;
   justify-content: center;
@@ -22,7 +22,7 @@
   margin-bottom: 0;
 }
 .tab {
-  background: #756A66;
+  background: #0a74ad;
   flex: 0 0 25%;
   text-align: center;
   padding: 20px 0;
