--- a/app/views/fines/search.html.erb
+++ b/app/views/fines/search.html.erb
@@ -6,7 +6,7 @@
 <% end%>
 
 <% if result.size ==0 %>
-  <%= Aucune amende ne correspond à votre demande veuillez changer vos critères %>
+ <p> Aucune amende ne correspond à votre demande veuillez changer vos critères <p>
 <% else %>
   <p> <%= result.size %> amendes correspondent à vos critères </p>
   <div class="owl-carousel">
